package padroescomportamentais.interpreter;

public interface IComandoRobo {
    void interpretar(Robo robo);
}
